maze.lessons.maze.pledge.PledgeMaze.scala.error
Escaper:18: warning: enclosing method suivre_mur has result type Unit: return value discarded
  return angle2
  ^Escaper:23: error: type mismatch;
 found   : Unit
 required: Int
do {angle=suivre_mur(angle)} while (!(angle==0 && getDirection==dir))
                    ^